[package]
name = "uikit"
version = "0.0.1"
authors = ["Steven Sheldon"]

description = "Rust wrapper for iOS's UIKit framework."
keywords = ["objective-c", "ios", "uikit", "cocoa"]
repository = "http://github.com/SSheldon/rust-uikit"
license = "MIT"

exclude = [".gitignore", "ios-example/**", "impl/**"]

[dependencies]
core-graphics = "0.1"
objc = "0.1"
objc_id = "0.0"
objc-foundation = "0.0"
