[package]
name = "uikit-impl"
version = "0.0.0"
authors = ["Steven Sheldon"]

build = "build.rs"

[dependencies]
libc = "0.1"
core-graphics = "0.1"
block = "0.1"
dispatch = "0.0"
objc = "0.1"
objc_id = "0.0"
objc-foundation = "0.0"

[dependencies.uikit]
path = ".."

[build-dependencies]
gcc = "0.3"
