[package]
name = "uikit-example"
version = "0.0.0"
authors = ["Steven Sheldon"]

[lib]
name = "uikit_example"
crate-type = ["staticlib"]

[dependencies]
core-graphics = "0.9.1"
objc_id = "0.1"
objc-foundation = "0.1.1"

[dependencies.uikit]
path = "../.."

[dependencies.uikit-impl]
path = "../../impl"
